--- a/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
+++ b/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-6">
       <div class="form-group">
-        <label for="amount" i18n="Amount@@amount">Amount: </label>
+        <label for="amount" i18n="Amount@@amount">Amount</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="amount" [(ngModel)]="paperBuy.amount" name="amount">
       </div>
 
       <div class="form-group">
-        <label for="price" i18n="Price@@price">Price: </label>
+        <label for="price" i18n="Price@@price">Price</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="paperBuy.price" name="price">
       </div>
 
