--- a/src/app/learning/paper-sell-card/paper-sell-card.component.html
+++ b/src/app/learning/paper-sell-card/paper-sell-card.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-6">
           <ul>
-            <li><span i18n="Stock Value@@stockValue">Stock value:</span> {{ paperSell.stock_data.price }}
+            <li><span i18n="Stock Value@@stockValue">Stock value</span>: {{ paperSell.stock_data.price }}
               <zen-edit-stock [stockInput]="paperSell.stock_data" (onStockUpdated)="refreshSell()"></zen-edit-stock> 
               <li><hr/></li>
           </ul>
