--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -7,7 +7,7 @@
         experience.nickname }} 
 
         <span title="{{ getDateLapse(experience.creation_date) }}">({{ experience.creation_date | date: "dd.MM.y" }})</span>
-        <span i18n="by@@By">by</span> <strong>[{{ experience.owner_data.username }}]</strong>
+         <span i18n="by@@By">by</span> <strong>[{{ experience.owner_data.username }}]</strong>
       </div>
       <div class="col-1">
         <zen-note-modal [operation_pk]="experience.pk"></zen-note-modal>
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="col-5">
           <ul *ngIf="experience.detailed">
-            <li><span i18n="Stop Loss@@stopLoss">Stop Loss: R$</span> <span [ngStyle]="{'color': experience.stop_loss_result | number: '1.2-2' | numberColor}"> {{ experience.stop_loss_result | number: '1.2-2' }}</span>/ 
+            <li><span i18n="Stop Loss@@stopLoss">Stop Loss</span>: R$ <span [ngStyle]="{'color': experience.stop_loss_result | number: '1.2-2' | numberColor}"> {{ experience.stop_loss_result | number: '1.2-2' }}</span>/ 
               <span [ngStyle]="{'color': experience.stop_loss_percent | number: '1.2-2' | numberColor} ">{{ experience.stop_loss_percent | number: '1.2-2' }}</span>%</li>
             <li><span i18n="TargetGain@@targetGain">Target Gain: R$</span> <span [ngStyle]="{'color': experience.target_gain | number:'1.2-2' | numberColor}">{{ experience.target_gain | number:'1.2-2' }}</span> /
               <span [ngStyle]="{'color': experience.target_gain_percent | number: '1.2-2' | numberColor}">{{ experience.target_gain_percent | number: '1.2-2' }}</span>%</li>
@@ -39,20 +39,20 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><span i18n="StopLoss@@stopLoss">Stop loss:</span> <span [ngStyle]="{'color':  experience.stop_loss_total_percent |
               number: '1.2-2' | numberColor }">{{  experience.stop_loss_total_percent | number: '1.2-2' }}</span>%</li>
-              <li class="list-group-item"><span i18n="Target@@target">Target:</span> <span [ngStyle]="{'color':  experience.target_gain_total_percent |
+              <li class="list-group-item"><span i18n="Target@@target">Target</span>: <span [ngStyle]="{'color':  experience.target_gain_total_percent |
               number: '1.2-2' | numberColor }">{{  experience.target_gain_total_percent | number: '1.2-2' }}</span>%</li>
-              <li class="list-group-item"><span i18n="Stock@@stock">Stock:</span> <span [ngStyle]="{'color':  experience.experience_total_gain_percent |
+              <li class="list-group-item"><span i18n="Stock@@stock">Stock</span>: <span [ngStyle]="{'color':  experience.experience_total_gain_percent |
               number: '1.2-2' | numberColor }">{{  experience.experience_total_gain_percent | number: '1.2-2' }}</span>%</li>
             </ul>
           </div>
         </div>
         <div class="col-7">
           <ul>
-            <li><strong><span i18n="Price@@price">Price: R$</span> {{ experience.price }}/<span *ngIf="experience.detailed">R$ {{ experience.operation_average_price | number: '1.2-2'}}</span></strong></li>
-            <li><span i18n="Amount@@amount">Amount:</span> {{ experience.amount }}</li>
+            <li><strong><span i18n="Price@@price">Price</span>: R$ {{ experience.price }}/<span *ngIf="experience.detailed">R$ {{ experience.operation_average_price | number: '1.2-2'}}</span></strong></li>
+            <li><span i18n="Amount@@amount">Amount</span>: {{ experience.amount }}</li>
             <li *ngIf="experience.detailed"><span i18n="Cost@@cost">Cost: R$</span> {{ experience.cost |  number: '1.2-2' }}/R$ {{ experience.average_cost | number: '1.2-2' }}</li> <!-- Colocar o get color -->
             <li><hr></li>
-            <li><span i18n="Stock Price@@stockPrice">Stock price: R$</span> {{ experience.stock_data.price }}</li>
+            <li><span i18n="Stock Price@@stockPrice">Stock price</span>: R$ {{ experience.stock_data.price }}</li>
             <li *ngIf="experience.detailed"><span i18n="Stock Cost@@stockCost">Stock cost: R$</span> {{ experience.stock_cost | number: '1.2-2' }}/R$ {{ experience.average_stock_cost | number: '1.2-2' }}</li>
             <li *ngIf="experience.detailed"><span i18n="StockProfit@@stockProfit">Stock profit: R$</span> <span [ngStyle]="{'color': experience.experience_gain |
             number: '1.2-2' | numberColor }">{{ experience.experience_gain | number: '1.2-2' }}</span>/
