--- a/src/app/operation/sell-edit/sell-edit.component.html
+++ b/src/app/operation/sell-edit/sell-edit.component.html
@@ -2,22 +2,22 @@
   <div class="row">
     <div class="col-6">
       <div class="form-group">
-        <label for="amount" i18n="Amount@@amount">*Amount: </label>
+        *<label for="amount" i18n="Amount@@amount">Amount</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="amount" [(ngModel)]="sell.amount" name="amount" required>
       </div>
 
       <div class="form-group">
-        <label for="price" i18n="Price@@price">*Price: </label>
+        *<label for="price" i18n="Price@@price">Price</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="sell.price" name="price" required>
       </div>
 
       <div class="form-group">
-        <label for="nickname" i18n="Nickname@@nickname">Nickname: </label>
+        <label for="nickname" i18n="Nickname@@nickname">Nickname</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
       </div>
 
       <div class="form-group">
-        <label for="category" i18n="Category@@category">Category: </label>
+        <label for="category" i18n="Category@@category">Category</label>: 
         <div class="row">
           <div class="col-8">
             <select [(ngModel)]="sell.category" class="form-control" name="category">
@@ -43,12 +43,12 @@
     </div>
     <div class="col-6">
       <div class="form-group">
-        <label for="stop_loss" i18n="Stop loss@@stoploss">Stop loss: </label>
+        <label for="stop_loss" i18n="Stop loss@@stopLoss">Stop loss</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="stop_loss" [(ngModel)]="sell.stop_loss" name="stop_loss">
       </div>
 
       <div class="form-group">
-        <label for="stop_gain" i18n="Stop gain@@stopgain">Stop gain: </label>
+        <label for="stop_gain" i18n="Stop gain@@stopgain">Stop gain</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="stop_gain" [(ngModel)]="sell.stop_gain" name="stop_gain">
       </div>
 
