--- a/src/app/stock/edit-stock/edit-stock.component.html
+++ b/src/app/stock/edit-stock/edit-stock.component.html
@@ -6,7 +6,8 @@
           <input type="text" id="stockPrice" class="form-control" [(ngModel)]="stockInput.price" name="price">
         </div>
         <div class="col-4 ml-0 pr-0">
-          <button class="btn" (click)="stockSelected()">Ok</button>
+          <button class="btn mr-1" (click)="stockSelected()">Ok</button>
+          <zen-auto-update [stock_pk]="stockInput.pk" (onStockUpdated)="stockUpdated($event)"></zen-auto-update>
         </div>
       </div>
     <small id="stockPriceHelp" class="form-text text-muted" i18n="Update Stock price@@updateStockprice">Update Stock price.</small>
