Changing icon size

--- a/src/app/stock/auto-update/auto-update.component.html
+++ b/src/app/stock/auto-update/auto-update.component.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn" *ngIf="!onError" (click)="autoUpdateStock()"><i class="fa fa-cloud-download"></i></button>
-<button type="button" class="btn btn btn-danger" *ngIf="onError" (click)="autoUpdateStock()"><i class="fa fa-exclamation-triangle"></i></button>
+<button type="button" class="btn btn-sm" *ngIf="!onError" (click)="autoUpdateStock()"><i class="fa fa-cloud-download"></i></button>
+<button type="button" class="btn btn-sm btn-danger" *ngIf="onError" (click)="autoUpdateStock()"><i class="fa fa-exclamation-triangle"></i></button>
