--- a/src/app/stock/edit-stock/edit-stock.component.html
+++ b/src/app/stock/edit-stock/edit-stock.component.html
@@ -6,7 +6,7 @@
           <input type="text" id="stockPrice" class="form-control" [(ngModel)]="stockInput.price" name="price">
         </div>
         <div class="col-4 ml-0 pr-0">
-          <button class="btn mr-1" (click)="stockSelected()">Ok</button>
+          <button class="btn btn-sm mr-1" (click)="stockSelected()">Ok</button>
           <zen-auto-update [stock_pk]="stockInput.pk" (onStockUpdated)="stockUpdated($event)"></zen-auto-update>
         </div>
       </div>
