--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -15,7 +15,7 @@
           
           <hr>
         </div>
-        <zen-edit-stock [stockInput]="buy.stock_data" (onStockUpdated)="notifyChanges()"></zen-edit-stock> 
+        <zen-stock-edit [stockInput]="buy.stock_data" (onStockUpdated)="notifyChanges()"></zen-stock-edit> 
       </div>
     </div>
   </div>
