--- a/src/app/stock/stock-card/stock-card.component.html
+++ b/src/app/stock/stock-card/stock-card.component.html
@@ -1,22 +1,23 @@
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title">
+    <span class="card-title">
 
       <div class="row">
-        <div class="col-5">{{stock.code}}
+        <div class="col-3"><h4>{{stock.code}}</h4>
           <h6><small *ngIf="stock.owned > 0">{{ stock.owned }}</small><small *ngIf="stock.owned == 0">:(</small></h6>
-          
         </div>
-        <div class="col-7 card-subtitle text-muted">
+        <div class="col-6 card-subtitle text-muted">
           <h6><small i18n="Profit@@profit">Profit:</small> R${{stock.historical.profit}}</h6>
           <h6><small i18n="ProfitPrct@@profitPrct">Profit(%):</small> {{stock.historical.profit_percent}}%</h6>
         </div>
+        <div class="col-3">
+          <zen-experience-accordion [stock_input]="stock"></zen-experience-accordion>
+        </div>
       </div>
-    </h4>
+    </span>
     <hr>
 
     <h6 class="card-subtitle mb-2 text-muted" *ngIf="!editing" (dblclick)="toggleEdit()"><small i18n="Stock price@@stockPrice">Stock price:</small> R${{stock.price}}</h6>
     <zen-stock-edit *ngIf="editing" [stockInput]="stock" (onStockUpdated)="updateStock($event)"></zen-stock-edit>
-    <zen-experience-accordion [stock_input]="stock"></zen-experience-accordion>
   </div>
 </div>
