--- a/src/app/stock-edit/stock-edit/stock-edit.component.html
+++ b/src/app/stock-edit/stock-edit/stock-edit.component.html
@@ -2,10 +2,10 @@
   <div class="col-12">
     <form #editStockForm="ngForm">
       <div class="form-row mr-0 ml-0 pr-0 pl-0">
-        <div class="col-8 mr-0 pr-0">
-          <input type="text" id="stockPrice" class="form-control" [(ngModel)]="stockInput.price" name="price">
+        <div class="col-4 mr-0 pr-0">
+          <input type="text" size="10" id="stockPrice" class="form-control" [(ngModel)]="stockInput.price" name="price">
         </div>
-        <div class="col-4 ml-0 pr-0">
+        <div class="col-8 ml-0 pr-0">
           <button class="btn btn-sm mr-1" (click)="stockSelected()">Ok</button>
           <zen-auto-update [stock_pk]="stockInput.pk" (onStockUpdated)="stockUpdated($event)"></zen-auto-update>
         </div>
