--- a/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
+++ b/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
@@ -1,4 +1,4 @@
-<button i18n-title="Ppbuy tip@@ppBuyTip" title="Make a paper buy (A fake buy just for learning purposes)" type="button" class="btn btn-primary"
+<button i18n-title="Ppbuy tip@@ppBuyTip" title="Make a paper buy (A fake buy just for learning purposes)" type="button" class="btn btn-primary btn-sm"
     (click)="quickPaperBuy();"
      i18n="Quick Paper Purchase@@quickPaperPurchase">
   <i class="fa fa-graduation-cap"></i>
