--- a/src/app/stock/stock-card/stock-card.component.html
+++ b/src/app/stock/stock-card/stock-card.component.html
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-3"><h4>{{stock.code}}</h4>
-          <h6><small *ngIf="stock.owned > 0">{{ stock.owned }}</small><small *ngIf="stock.owned == 0">:(</small></h6>
+          <h6><small *ngIf="stock.owned > '0'">{{ stock.owned }}</small><small *ngIf="stock.owned == '0'">:(</small></h6>
         </div>
         <div class="col-6 card-subtitle text-muted">
           <h6><small i18n="Profit@@profit">Profit:</small> R${{stock.historical.profit}}</h6>
