Added buy price on the sell

--- a/src/app/experience/experience-card-modal/experience-card-modal.component.html
+++ b/src/app/experience/experience-card-modal/experience-card-modal.component.html
@@ -19,4 +19,4 @@
   </div>
 </ng-template>
 
-<button *ngIf="experiences.length > 0" class="btn btn-sm btn-outline-primary" title="Add Stock" (click)="openLg(content)"><i class="fa fa-folder-open"></i></button>
+<button *ngIf="experiences.length > 0" class="btn btn-sm btn-outline-primary" title="Manage Experience" (click)="openLg(content)"><i class="fa fa-folder-open"></i></button>
