--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -14,7 +14,7 @@
     <div class="col-12" *ngFor="let experience of experiences">
       <div class="row mt-3">
         <div class="col-5">
-          <zen-experience-card [experience]="experience"></zen-experience-card> 
+          <zen-experience-card [experience]="experience" (onStockUpdated)="retrieveExperiments()"></zen-experience-card> 
         </div>
 
         <div class="col-7">
