--- a/src/app/operation/sell-card/sell-card.component.css
+++ b/src/app/operation/sell-card/sell-card.component.css
@@ -1,40 +1,8 @@
+@import url("../../../assets/css/cards.css");
+
 .zen-card-class {
   border-width: 5px;
   border-color: #47A8FF;
-}
-
-.zen-card-gain {
-  background: #B0FDB0;
-}
-
-.zen-card-loss {
- background: #FEB2AE;
-}
-
-.zen-card-executed {
-  background: #C9C9C9;
-}
-
-.zen-card-stop {
-  background: #F9F986;
-}
-
-.zen-card-gain {
-  background: #B0FDB0;
-}
-
-.zen-card-lose {
-  background: #FEB2AE;
-}
-
-.zen-card-archived {
-background: repeating-linear-gradient(
-  45deg,
-  #9B9B9B,
-  #CCC9E7 10px,
-  #CCC9E7 10px,
-  #CCC9E7 40px
-);
 }
 
 .star {
