--- a/src/app/stock/resume/resume.component.html
+++ b/src/app/stock/resume/resume.component.html
@@ -1,7 +1,6 @@
 <div class="row mb-3">
   <div class="col-lg-4 col-xl-2" *ngFor="let resume of resumes; let i = index">
-    <div class="card mb-1 zen-card-class" [ngStyle]="{'background': getBackgroundColor(resume.stock_result),
-      'border-color': getBorderColor(resume.owner)}">
+    <div class="card mb-1 zen-card-class" [ngClass]="[getCardClass(resume.result)]">
       <div class="card-body">
         <h4 class="card-title">{{ resume.name }} ({{ resume.code }})</h4>
         <h6 class="card-subtitle mb-2 text-muted"><span [ngStyle]="{'color': resume.stock_result_peent | number:
