--- a/src/app/experience/experience-card/experience-card.component.css
+++ b/src/app/experience/experience-card/experience-card.component.css
@@ -1,3 +1,5 @@
+@import url("../../../assets/css/cards.css");
+
 .star {
   font-size: 1.5rem;
   color: #EAEDEF;
@@ -5,10 +7,4 @@
 
 .filled {
   color: #007BFF;
-}
-
-.zen-card-class {
-  border-style: solid;
-  border-width: 5px;
-  border-color: #47A8FF;
 }
