--- a/src/app/learning/paper-buy-card/paper-buy-card.component.html
+++ b/src/app/learning/paper-buy-card/paper-buy-card.component.html
@@ -1,4 +1,4 @@
-<div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(buy)}">
+<div class="" [ngClass]="['card', 'zen-card-class', getClassCard(buy)]">
   <div class="card-body">
     <div class="row card-title">
       <div class="col-11">
