--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -1,3 +1,9 @@
+.zen-card-class {
+  border-style: solid;
+  border-width: 5px;
+  border-color: #A9BCD0;
+}
+
 .zen-card-gain {
   background: #d7e2c2;
 }
