Adding color if there is not enough money for the buy

--- a/src/app/experience-create/experience-accordion/experience-accordion.component.css
+++ b/src/app/experience-create/experience-accordion/experience-accordion.component.css
@@ -10,6 +10,7 @@
 /* ngb-accordion /deep/ .card-header { */
 /*   border: 1px solid; */
 /* } */
+@import url("../../../assets/css/cards.css");
 
 ngb-accordion /deep/ .card {
   border: 0px;
