--- a/src/app/experience/experience-card/experience-card.component.html
+++ b/src/app/experience/experience-card/experience-card.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="col-4">
-        <button class="btn btn-outline-primary btn-sm mr-1" (click)="toggleEdit()"><i class="fa fa-edit"></i></button>
+        <button class="btn btn-outline-primary btn-sm mr-1" (click)="toggleEdit()" *ngIf="editable"><i class="fa fa-edit"></i></button>
         <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperience($event)" ></zen-quick-buy>
         <zen-paper-quick-buy class="mr-1" [experience]="experience"
                            (onOperationChanged)="updateExperience($event)" ></zen-paper-quick-buy>
