--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -34,7 +34,7 @@
       <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperiment($event)" ></zen-quick-buy>
       <zen-paper-quick-buy class="mr-1" [experience]="experience"
                            (onOperationChanged)="updateExperiment($event)" ></zen-paper-quick-buy>
-        <button class="btn btn-outline-primary btn-sm" title="return_card" (click)="toggleEdit()"><i class="fa fa-backward"></i></button>
+        <button class="btn btn-outline-primary btn-sm" title="return_card" (click)="toggleEdit()" *ngIf="editable"><i class="fa fa-backward"></i></button>
 
     </div>
     <div class="col-6">
