--- a/src/app/note/note-modal/note-modal.component.html
+++ b/src/app/note/note-modal/note-modal.component.html
@@ -49,4 +49,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-outline-primary" (click)="openLg(content)"><i class="fa fa-list-alt"></i></button>
+<button class="btn btn-sm btn" (click)="openLg(content)"><i class="fa fa-list-alt"></i></button>
