--- a/src/app/operation/archive/archive.component.html
+++ b/src/app/operation/archive/archive.component.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn-primary" (click)="archive();" i18n="Archive@@archive">Archive
+<button type="button" class="btn btn-sm" (click)="archive();" i18n="Archive@@archive"><i class="fa fa-archive"></i>
 </button>
