--- a/src/app/operation/quick-sell/quick-sell.component.html
+++ b/src/app/operation/quick-sell/quick-sell.component.html
@@ -1,2 +1,4 @@
-<button i18n-title="Project Sale title@@projectSaleTitle" title="Project a sell. To execute it click on execute button." type="button" class="btn btn-primary"
-  (click)="quickSell();" i18n="Project Sale@@projectsaleQS">Project Sale</button>
+<button i18n-title="Project Sale title@@projectSaleTitle" title="Project a sell. To execute it click on execute button." type="button" class="btn btn-sm btn"
+  (click)="quickSell();" i18n="Project Sale@@projectsaleQS">
+  <i class="fa fa-bullseye"></i>
+</button>
