--- a/src/app/note/note-modal/note-modal.component.html
+++ b/src/app/note/note-modal/note-modal.component.html
@@ -49,4 +49,7 @@
   </div>
 </ng-template>
 
-<button class="btn btn-sm btn" (click)="openLg(content)"><i class="fa fa-list-alt"></i></button>
+<button class="btn btn-sm btn" (click)="openLg(content)"
+i18n-title="Note title@@executeSaleTitle" title="Add a note to the operation">
+  <i class="fa fa-list-alt"></i>
+</button>
