--- a/src/app/operation/archive/archive.component.html
+++ b/src/app/operation/archive/archive.component.html
@@ -1,2 +1,4 @@
-<button type="button" class="btn btn-sm" (click)="archive();" i18n="Archive@@archive"><i class="fa fa-archive"></i>
+<button type="button" class="btn btn-sm" (click)="archive();"
+  i18n-title="Archive operation title@@archiveOperationTitle" title="Archive this operation">
+  <i class="fa fa-archive"></i>
 </button>
