--- a/src/app/stock-edit/auto-update/auto-update.component.html
+++ b/src/app/stock-edit/auto-update/auto-update.component.html
@@ -1,2 +1,19 @@
-<button type="button" class="btn btn-sm" *ngIf="!onError" (click)="autoUpdateStock()"><i class="fa fa-cloud-download"></i></button>
-<button type="button" class="btn btn-sm btn-danger" *ngIf="onError" (click)="autoUpdateStock()"><i class="fa fa-exclamation-triangle"></i></button>
+<button
+  type="button"
+  class="btn btn-sm"
+  *ngIf="!onError"
+  (click)="autoUpdateStock()" 
+  i18n-title="Auto Update title@@autoUpdateTitle"
+  title="Retrieve the price from a service." >
+    <i class="fa fa-cloud-download"></i>
+</button>
+
+<button
+  type="button"
+  class="btn btn-sm btn-danger"
+  *ngIf="onError"
+  (click)="autoUpdateStock()" 
+  i18n-title="Auto Update Error title@@autoUpdateErrorTitle"
+  title="Error on retrieving price." >
+    <i class="fa fa-exclamation-triangle"></i>
+</button>
